# agent-readiness-lint-oss

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
agent_readiness_lint/: __init__.py  __main__.py  output.py  scoring.py
agent_readiness_lint/checks/: __init__.py  _path_safety.py  agent_instructions.py  generated_hygiene.py  public_readiness.py  secret_risk.py  test_ci_signals.py
docs/: DESIGN.md  DOGFOODING.md  EXAMPLES.md  PUBLIC_CANDIDATE_CHECKLIST.md
examples/: README.md
examples/fixtures/good-repo/: .gitignore  AGENTS.md  LICENSE  README.md
examples/fixtures/good-repo/tests/: test_example.py
examples/fixtures/risky-repo/: config.py  fake.env.example  fake_id_rsa.txt
examples/sample-repo/: AGENTS.md  README.md
examples/sample-repo/src/: app.py
examples/sample-repo/tests/: test_app.py
tests/: conftest.py  test_checks_agent_instructions.py  test_checks_generated_hygiene.py  test_checks_public_readiness.py  test_checks_secret_risk.py  test_checks_test_ci.py  test_cli.py  test_examples.py  test_output_safety.py  test_scoring.py  test_smoke.py
